# Test_LLM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  train-smoke.yml
configs/: data.yaml  eval.yaml  model.yaml  train.yaml
docs/: repo_blueprint.md  repo_files_created.md  repo_walkthrough.md
scripts/: bert_embeddings.py  eval.py  prepare_data.py  train.py
src/mini_tcn_llm/: __init__.py  config.py  data.py  eval.py  generate.py  model.py  tokenizer.py  train.py  utils.py
tests/: test_data_pipeline.py  test_model_shapes.py  test_tokenizer_roundtrip.py
