[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-tcn-llm"
version = "0.1.0"
description = "Draft scaffold for training a mini LLM using a TCN backbone"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "tokenizers>=0.15",
  "datasets>=2.16",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "numpy>=1.26",
  "pypdf>=4.2",
  "transformers>=4.40"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "mypy>=1.8"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
